@@ -428,3 +428,5 @@
 	  From Freddie Chopin.
 	* Rename CONFIG_PCODE and CONFIG_FICL as CONFIG_INTERPRETERS_PCODE and
 	  CONFIG_INTERPRETERS_FICL for consistency with other configuration naming.
+	* apps/examples/keypadtest:  A keypad test example contributed by Denis
+	  Carikli
